fix text no wrap

--- a/h5game_backend/static/css/prized.css
+++ b/h5game_backend/static/css/prized.css
@@ -10,9 +10,7 @@
     padding-top: 88px !important;
 }
 .div-prized-desc{
-    /*width: 100%;*/
     padding-left: 14%;
-    display: inline-block;
     font-style: italic;
     font-size: 22px;
     font-weight: bold;
